@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 16, 2008</p>
+      <p>Last Updated: November 17, 2008</p>
     </td>
   </tr>
 </table>
@@ -1200,7 +1200,9 @@ buildroot-0.1.2 2007-11-06 &lt;spudmonkey@racsa.co.cr&gt
 
 <pre><ul>
 nuttx-0.3.19 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
-	* Add the basic infrastructure for support the poll() API
+	* Add poll() and select() APIs (in the initial check-in, these work only with character devices) 
+	* Add poll() methods to /dev/null, /dev/zero, pipes, and fifos.
+	* Add examples/poll for testing poll() and select()
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
